--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-#spring.profiles.active=EN
+spring.profiles.active=cat, ES
+guru.username=superuser
+guru.password=dbPassword
+guru.jdbcurl=someUrlforDB
